# FmodDemo

app/: build.gradle
app/src/androidTest/java/com/example/practicemethod/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio.m4a
app/src/main/cpp/: CMakeLists.txt  com_example_practicemethod_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/practicemethod/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/practicemethod/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
